--- a/style.css
+++ b/style.css
@@ -1,12 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&display=swap');
+:root {
+    --background: #23A89E;
+    --accent: #FADFDE;
+    --font1: 'Oswald';
+    --font2: ;
+}
+
+/* bakgrundsfärg */
+.body {
+    background-color: var(--background);
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: sans-serif, Oswald;
+    /* font-family: 'Oswald'; */
 }
 
+
+
+/* menybar */
+
+/* menybarens storlek och färg osv */
 .navbar {
-    background: #23A89E;
+    background: var(--background);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -17,6 +35,7 @@
     z-index: 999;
 }
 
+/* ändrar positionen på skaerna i menybaren */
 .navbar_container {
     display: flex;
     justify-content: space-between;
@@ -28,6 +47,7 @@
     padding: 0 50px;
 }
 
+/* logo utseende */
 /* #compass_logo {
     width: 60px;
     height: 60px;
@@ -37,14 +57,21 @@
 
 } */
 
+/* utseende på loganamn */
 #navbar_logo {
-    color: #FADFDE;
+    color: var(--accent);
     display: flex;
     align-items: center;
     text-decoration: none;
+    font-family: var(--font1);
     font-size: 2rem;
 }
 
+.fa-mountain-sun {
+    margin-right: 0.5rem;
+}
+
+/* ämdrar utseende på meny bar till liggande */
 .navbar_menu {
     display: flex;
     align-items: center;
@@ -52,12 +79,15 @@
     text-align: center;
 }
 
+/* Utrymmet mellan Home Rooms och Cntacts */
 .navbar_item {
     height: 80px;    
 }
 
+/* knapparnas utseende */
 .navbar_links {
-    color: #FADFDE;
+    color: var(--accent);
+    background-color: var(--background);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -66,13 +96,13 @@
     height: 100%;
 }
 
-.navbar_button {
+/* .navbar_button {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 1rem;
     width: 100%;
-}
+} */
 
 /* .button {
     display: flex;
@@ -94,14 +124,14 @@
     transition: all 0.3s ease;
 } */
 
+/* ändrar färg på knapparna när man tar musen över */
 .navbar_links:hover {    
-    background: #FADFDE;
-    color: #23A89E;
-    transition: all 0.3s ease;
-    
-    
+    background: var(--accent);
+    color: var(--background);
+    transition: all 0.3s ease;   
 }
 
+/* samma som ovan fast för mobil */
 @media screen and (max-width: 960px) {
     .navbar_container {
         display: flex;
@@ -110,48 +140,54 @@
         z-index: 1;
         width: 100%;
         max-width: 1300px;
-        padding: 0;
+        padding: 0;        
     }
     
+    /* menybarens utseende */
     .navbar_menu {
         display: grid;
         grid-template-columns: auto;
-        margin: 0;
+        margin: 00;
         width: 100%;
         position: absolute;
-        /* top: -1000px;
-        opacity: 0; */
+        top: -1000px;
+        opacity: 0;
         transition: all 0.5 ease;
-        height: 30vh;
+        height: 50vh;
         z-index: -1;
+        background: red;
     }
 
+    /* meny som kommer fram när man trycker på strecken */
     .navbar_menu.active {
         background: red;
         top: 100%;
         opacity: 1;
         transition: all 0.5s ease;
         z-index: 99;
-        height: 50vh;
+        height: 10vh;
         font-size: 1.6rem;
     }
 
+    /* logo position */
     #navbar_logo {
         padding-left: 25px;
     }
 
+    /* meny knapp */
     .navbar_toggle .bar {
         width: 25px;
         height: 3px;
         margin: 5px auto;
         transition: all 0.3s ease-in-out;
-        background: #FADFDE;
+        background: var(--accent);
     }
 
     .navbar_item {        
         width: 100%;        
     }
 
+    /* Home, Rooms och Contacts */
     .navbar_links {
         text-align: center;
         padding: 2rem;
@@ -159,6 +195,7 @@
         display: table;
     }
 
+    /* meny streckens position */
     #mobile-menu {
         position: absolute;
         top: 20%;
@@ -166,7 +203,7 @@
         transform: translate(5%, 20%);        
     }
 
-    .navbar_button {
+    /* .navbar_button {
         padding-bottom: 2rem;
     }
 
@@ -177,19 +214,23 @@
         width: 80%;
         height: 80px;
         margin: 0;
-    }
+    } */
 
     .navbar_toggle .bar {
         display: block;
         cursor: pointer;
     }
 
-    #mobile-menu.is-active .bar:nth-child(2) {
-        opacity: 10;
-    }
+    /* #mobile-menu.is-active .bar:nth-child(2) {
+        opacity: 0;
+    } */
 
     #mobile-menu.is-active .bar:nth-child(1) {
         transform: translateY(8px) rotate(45deg);
+    }
+
+    #mobile-menu.is-active .bar:nth-child(2) {
+        opacity: 0;
     }
 
     #mobile-menu.is-active .bar:nth-child(3) {
@@ -197,4 +238,58 @@
     }
 
 }
+
+
+/* Hero section CSS*/
+.main {
+    background-color: var(--background);
+}
+
+.main_container {
+    /* display: grid;
+    grid-template-columns: 1fr 1fr; */
+    align-items: center;
+    justify-self: center;
+    margin: 0 auto;
+    height: 90vh;
+    background-color: #141414;
+    z-index: 1;
+    width: 100%;
+    /* max-width: 1300px; */
+    /* padding: 0 50px; */
+}
+
+.main_content h1 {
+    align-items: center;
+    justify-self: center;
+    font-size: 3rem;
+    /* background-color: var(--background); */
+    /* background-image: linear-gradient(to top, red 0%,yellow 100%); */
+}
+
+.main_content h2 {
+    font-size: 2rem;
+}
+
+/* .main_content p {
+    margin-top: 1rem;
+    font-size: 2rem;
+    font-weight: 700;
+} */
+
+.main_img--container {
+    text-align: center;
+}
+
+.main_img {
+    
+    width: 100%;
+    
+}
+
+
+
+
+
+
 
