--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
 :root {
     --background: #23A89E;
     --accent: #FADFDE;
-    --font1: 'Oswald';
-    --font2: ;
+    --font1: 'Oswald', sans-serif;
+    --font2: 'Lato', sans-serif;
+    --font3: 'Lato' light;
 }
 
-/* bakgrundsfärg */
-.body {
-    background-color: var(--background);
-}
 
+/* CSS-reset */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -18,7 +18,10 @@
     /* font-family: 'Oswald'; */
 }
 
-
+/* bakgrundsfärg */
+body {
+    background-color: var(--background);
+}
 
 /* menybar */
 
@@ -81,7 +84,8 @@
 
 /* Utrymmet mellan Home Rooms och Cntacts */
 .navbar_item {
-    height: 80px;    
+    height: 80px; 
+    font-family: var(--font2);   
 }
 
 /* knapparnas utseende */
@@ -245,31 +249,72 @@
     background-color: var(--background);
 }
 
-.main_container {
-    /* display: grid;
-    grid-template-columns: 1fr 1fr; */
+ /* Container holding the image and the text */
+ .main_container {
+    position: relative;
+    text-align: center;
+    /* color: var(--accent); */
+    /* color: black; */
+  }  
+  
+  /* Centered text */
+  .centered_h1 { 
+    background-color: var(--background);
+    color: var(--accent);
+    /* mix-blend-mode: screen; */
+    position: absolute;
+    width: 120vh;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    font-family: var(--font2);   
+    font-size: 5rem;    
+  } 
+
+   /* Centered text */
+   .centered_h2 {
+    background-color: var(--background);
+    color: var(--accent);    
+    /* mix-blend-mode: screen; */
+    position: absolute;
+    width: 120vh;
+    top: 39%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: var(--font2);
+    font-size: 2rem;
+  } 
+
+/* .main_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-self: center;
     margin: 0 auto;
-    height: 90vh;
+    height: 60vh;
     background-color: #141414;
     z-index: 1;
     width: 100%;
-    /* max-width: 1300px; */
-    /* padding: 0 50px; */
-}
+    max-width: 1300px;
+    padding: 0 50px;
+} */
 
-.main_content h1 {
+/* .main_content h1 {
     align-items: center;
     justify-self: center;
+    text-align: center;
+    background-color: #141414;
+    
     font-size: 3rem;
-    /* background-color: var(--background); */
-    /* background-image: linear-gradient(to top, red 0%,yellow 100%); */
-}
+    background-color: var(--background);
+    background-image: linear-gradient(to top, red 0%,yellow 100%);
+} */
 
-.main_content h2 {
+/* .main_content h2 {
+    align-items: center;
+    justify-self: center;
     font-size: 2rem;
-}
+} */
 
 /* .main_content p {
     margin-top: 1rem;
@@ -281,13 +326,235 @@
     text-align: center;
 }
 
-.main_img {
-    
-    width: 100%;
-    
+.main_img {    
+    width: 100%;    
 }
 
+/* .article {
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    margin: 0 auto;
+    height: 30vh;
+    background-color: #141414;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0 50px;
+} */
 
+/* .article_h2 {
+    left: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);    
+    font-size: 5rem; 
+    height: 60vh;
+    top: 20000%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #141414;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0 50px;
+} */
+
+/* Article 1 sektion */
+
+.article_1{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.article_1_h2 {
+    color: var(--accent);
+    font-size: 3rem;
+    font-family: var(--font2);
+    margin-bottom: 5%;
+}
+
+.article_1_p {
+    text-align: center;
+    color: var(--accent);
+    font-size: 1.8em;
+    font-family: var(--font2);
+    /* max-width: 60ch; */
+    line-height: 1.5em;
+    margin-bottom: 10%;
+}
+
+/* p {
+    text-align: center;
+    direction: center;
+    color: var(--accent);
+    font-size: 1.8em;
+    max-width: 60ch;
+    line-height: 1.5em;
+    margin-bottom: 10%;
+} */
+
+/* Image row section */
+
+.column {
+    float: left;
+    width: 25%;
+    padding: 0px;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  /* Article 2 section */
+
+  .article_2{
+    /* display: block;
+    width: 80%;
+    margin: auto;
+    text-align: left;
+    padding-top: 100px; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-self: center;
+    margin: 0 auto;
+    height: 80vh;
+    background-color: #141414;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0 50px;
+}
+
+.article_2_h3 {
+    color: var(--accent);
+    font-size: 3rem;
+    font-family: var(--font2);
+    margin-bottom: 5%;
+}
+
+.article_2_p {
+    /* text-align: center; */
+    color: var(--accent);
+    font-size: 1.2em;
+    font-weight: 300;
+    font-family: var(--font2);
+    /* max-width: 60ch; */
+    line-height: 1.5em;
+    margin-bottom: 10%;
+}
+
+.video {
+    padding-top: 100px;
+    width: 100%;
+}
+
+/* Footer bar */
+.footer_container {
+    background-color: var(--background);
+    padding: 5rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#footer_logo {
+    color: var(--accent);
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    font-family: var(--font1);
+    font-size: 2rem;
+}
+
+/* .fotter_links {
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer_link-wrapper {
+    display: flex;
+}
+
+.footer_link-items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 16px;
+    text-align: left;
+    width: 160px;
+    box-sizing: border-box;
+}
+
+.footer_link-items h2 {
+    margin-bottom: 16px;
+}
+
+.footer_link-items > h2 {
+    color: #fff;
+}
+
+.footer_link-items a {
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 0.5rem;
+}
+
+.footer_link-items a:hover {
+    color: #e9e9e9;
+    transition: 0.3s ease-out;
+} */
+
+/* sociial icons */
+.social_icon-link {
+    color: var(--accent);
+    font-size: 24px;
+}
+
+.social_media {
+    max-width: 1000px;
+    width: 100%;
+}
+
+.social_media-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    max-width: 1000px;
+    margin: 40px auto 0 auto;
+}
+
+.social_icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 240px;
+}
+
+.social_logo {
+    color: var(--accent);
+    justify-content: flex-start;
+    margin-left: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 2rem;
+    align-items: center;
+    margin-bottom: 16px;
+}
+
+.website_rights {
+    color: var(--accent);
+}
 
 
 
