--- a/style.css
+++ b/style.css
@@ -6,26 +6,26 @@
     --accent: #FADFDE;
     --font1: 'Oswald', sans-serif;
     --font2: 'Lato', sans-serif;
-    --font3: 'Lato' light;
+    /* box-sizing: border-box;  */
 }
-
 
 /* CSS-reset */
 * {
     /* box-sizing: border-box; */
     margin: 0;
-    padding: 0;
-    /* font-family: 'Oswald'; */
+    padding: 0;    
 }
 
-/* bakgrundsfärg */
+/* bodys background and margin */
 body {
     background-color: var(--background);
+    margin-left: 10vh;
+    margin-right: 10vh;
 }
 
-/* menybar */
+/* menubar ---------------------------------------------------- */
 
-/* menybarens storlek och färg osv */
+/* menu bars color and size etc */
 .navbar {
     background: var(--background);
     height: 80px;
@@ -38,7 +38,7 @@ body {
     z-index: 999;
 }
 
-/* ändrar positionen på skaerna i menybaren */
+/* menu container position */
 .navbar_container {
     display: flex;
     justify-content: space-between;
@@ -50,17 +50,7 @@ body {
     padding: 0 50px;
 }
 
-/* logo utseende */
-/* #compass_logo {
-    width: 60px;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    margin-right: 0.5rem;
-
-} */
-
-/* utseende på loganamn */
+/* logo text */
 #navbar_logo {
     color: var(--accent);
     display: flex;
@@ -70,11 +60,12 @@ body {
     font-size: 2rem;
 }
 
+/* logo */
 .fa-mountain-sun {
     margin-right: 0.5rem;
 }
 
-/* ämdrar utseende på meny bar till liggande */
+/* menubar direction */
 .navbar_menu {
     display: flex;
     align-items: center;
@@ -82,7 +73,7 @@ body {
     text-align: center;
 }
 
-/* Utrymmet mellan Home Rooms och Cntacts */
+/* home rooms contacts */
 .navbar_item {
     height: 80px; 
     font-family: var(--font2);   
@@ -100,6 +91,7 @@ body {
     height: 100%;
 }
 
+/* to top button position */
 .navbar_button {
     display: flex;
     justify-content: center;
@@ -108,220 +100,65 @@ body {
     width: 100%;
 }
 
-.button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
+/* to top button design */
+#myBtn {
     padding: 10px 20px;
     height: 100%;
     width: 100%;
-    border: none;
+    border-color: var(--accent);
+    border-style: solid;
     outline: none;
     border-radius: 10px;
-    background: var(--accent);
-    color: var(--background);
-}
-
-.button:hover {
     background: var(--background);
-    color: var(--accent);
-    transition: all 0.3s ease;
+    color: var(--accent);  
+    font-family: var(--font2); 
+    cursor: pointer;
+    /* transition: all 0.7s ease;         */
+    /* validerings  fel :0.7s är inte ett transition-värde : all 0.7 ease  */
 }
 
-/* ändrar färg på knapparna när man tar musen över */
+/* to top button changes color when cursor hovers */
+#myBtn:hover{    
+    color: var(--background);
+    background-color: var(--accent);
+    /* transition: all 0.3s ease; */
+} 
+
+/* menubar items changes color when cursor hovers */
 .navbar_links:hover {    
     background: var(--accent);
     color: var(--background);
     transition: all 0.3s ease;   
 }
 
-/* samma som ovan fast för mobil */
-@media screen and (max-width: 960px) {
-    .navbar_container {
-        display: flex;
-        justify-content: space-between;
-        height: 80px;
-        z-index: 1;
-        width: 100%;
-        max-width: 1300px;
-        padding: 0;        
-    }
-    
-    /* menybarens utseende */
-    .navbar_menu {
-        display: grid;
-        grid-template-columns: auto;
-        margin: 00;
-        width: 100%;
-        position: absolute;
-        top: -1000px;
-        opacity: 0;
-        transition: all 0.5 ease;
-        height: 50vh;
-        z-index: -1;
-        background: red;
-    }
+/* menubar end--------------------------------------------------- */
 
-    /* meny som kommer fram när man trycker på strecken */
-    .navbar_menu.active {
-        background: red;
-        top: 100%;
-        opacity: 1;
-        transition: all 0.5s ease;
-        z-index: 99;
-        height: 10vh;
-        font-size: 1.6rem;
-    }
+/* Hero section CSS-----------------------------------------------*/
 
-    /* logo position */
-    #navbar_logo {
-        padding-left: 25px;
-    }
-
-    /* meny knapp */
-    .navbar_toggle .bar {
-        width: 25px;
-        height: 3px;
-        margin: 5px auto;
-        transition: all 0.3s ease-in-out;
-        background: var(--accent);
-    }
-
-    .navbar_item {        
-        width: 100%;        
-    }
-
-    /* Home, Rooms och Contacts */
-    .navbar_links {
-        text-align: center;
-        padding: 2rem;
-        width: 100%;
-        display: table;
-    }
-
-    /* meny streckens position */
-    #mobile-menu {
-        position: absolute;
-        top: 20%;
-        right: 5%;
-        transform: translate(5%, 20%);        
-    }
-
-    /* .navbar_button {
-        padding-bottom: 2rem;
-    }
-
-    .button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 80%;
-        height: 80px;
-        margin: 0;
-    } */
-
-    .navbar_toggle .bar {
-        display: block;
-        cursor: pointer;
-    }
-
-    /* #mobile-menu.is-active .bar:nth-child(2) {
-        opacity: 0;
-    } */
-
-    #mobile-menu.is-active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-    }
-
-    #mobile-menu.is-active .bar:nth-child(2) {
-        opacity: 0;
-    }
-
-    #mobile-menu.is-active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-    }
-
-}
-
-
-/* Hero section CSS*/
-.main {
+/* .main {
     background-color: var(--background);
-}
+} */
 
  /* Container holding the image and the text */
  .main_container {
     position: relative;
     text-align: center;
-    /* color: var(--accent); */
-    /* color: black; */
   }  
   
   /* Centered text */
   .centered_h1 { 
     background-color: var(--background);
     color: var(--accent);
+    /* color: black; */
     /* mix-blend-mode: screen; */
     position: absolute;
-    width: 120vh;
+    width: 90vh;
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%); 
     font-family: var(--font2);   
     font-size: 5rem;    
   } 
-
-   /* Centered text */
-   .centered_h2 {
-    background-color: var(--background);
-    color: var(--accent);    
-    /* mix-blend-mode: screen; */
-    position: absolute;
-    width: 120vh;
-    top: 39%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: var(--font2);
-    font-size: 2rem;
-  } 
-
-/* .main_container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    justify-self: center;
-    margin: 0 auto;
-    height: 60vh;
-    background-color: #141414;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 0 50px;
-} */
-
-/* .main_content h1 {
-    align-items: center;
-    justify-self: center;
-    text-align: center;
-    background-color: #141414;
-    
-    font-size: 3rem;
-    background-color: var(--background);
-    background-image: linear-gradient(to top, red 0%,yellow 100%);
-} */
-
-/* .main_content h2 {
-    align-items: center;
-    justify-self: center;
-    font-size: 2rem;
-} */
-
-/* .main_content p {
-    margin-top: 1rem;
-    font-size: 2rem;
-    font-weight: 700;
-} */
 
 .main_img--container {
     text-align: center;
@@ -331,51 +168,34 @@ body {
     width: 100%;    
 }
 
-/* .article {
-    display: flex;
-    align-items: center;
-    justify-self: center;
-    margin: 0 auto;
-    height: 30vh;
-    background-color: #141414;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 0 50px;
-} */
+/* hero section end---------------------------------------------- */
 
-/* .article_h2 {
-    left: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);    
-    font-size: 5rem; 
-    height: 60vh;
-    top: 20000%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #141414;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 0 50px;
-} */
 
-/* Article 1 sektion */
+/* Article 1 sektion ---------------------------------------------*/
 
 .article_1{
     width: 80%;
     margin: auto;
     text-align: center;
     padding-top: 100px;
+    /* border: solid; */
 }
 
 .article_1_h2 {
     color: var(--accent);
     font-size: 3rem;
     font-family: var(--font2);
-    margin-bottom: 5%;
+    margin-bottom: 2%;
 }
+
+.article_1_h3 {
+    text-transform: uppercase; 
+    color: var(--accent);
+    font-size: 1.5rem;
+    font-family: var(--font2);
+    margin-bottom: 2%;
+    
+  }
 
 .article_1_p {
     text-align: center;
@@ -387,17 +207,9 @@ body {
     margin-bottom: 10%;
 }
 
-/* p {
-    text-align: center;
-    direction: center;
-    color: var(--accent);
-    font-size: 1.8em;
-    max-width: 60ch;
-    line-height: 1.5em;
-    margin-bottom: 10%;
-} */
+/* article 1 end------------------------------------------------ */
 
-/* Image row section */
+/* Image row section -------------------------------------------- */
 
 .column {
     float: left;
@@ -411,7 +223,19 @@ body {
     display: table;
   }
 
-  /* Article 2 section */
+  /* image row section ------------------------------------------ */
+
+  /* Article 2 section -------------------------------------------*/
+
+  .article_2_h3 {
+    text-align: center;
+    /* transform: translate(-50% -50%);    får validerings fel:   är en ogiltig operator : translate(-50% -50%)  */
+    color: var(--accent);
+    font-size: 3rem;
+    font-family: var(--font2);
+    /* margin: auto; */
+    margin-top: 5%;
+}
 
   .article_2{
     /* display: block;
@@ -425,18 +249,22 @@ body {
     justify-self: center;
     margin: auto;
     height: 80vh;
-    background-color: #141414;
+    /* background-color:red; */
     z-index: 1;
     width: 100%;
     max-width: 1300px;
     padding: 0 50px;
 }
 
-.article_2_h3 {
+.article_2_h4 {
+    /* text-align: center;
+    transform: translate(-50% -50%); */
     color: var(--accent);
-    font-size: 3rem;
+    font-size: 2rem;
     font-family: var(--font2);
-    margin-bottom: 10%;
+    /* margin: auto; */
+    margin-top: 20%;
+    margin-bottom: 5%;
 }
 
 .article_2_p {
@@ -446,8 +274,9 @@ body {
     font-weight: 300;
     font-family: var(--font2);
     /* max-width: 60ch; */
-    line-height: 1.5em;
+    line-height: 1.2em;
     margin-bottom: 10%;
+    margin-right: 10%;
 }
 
 .video {
@@ -455,9 +284,9 @@ body {
     width: 100%;
 }
 
-/* Footer bar */
+/* Footer--------------------------------------------------------*/
+
 .footer_container {
-    background-color: var(--background);
     padding: 5rem 0;
     display: flex;
     flex-direction: column;
@@ -475,47 +304,6 @@ body {
     font-size: 2rem;
 }
 
-/* .fotter_links {
-    width: 100%;
-    max-width: 1000px;
-    display: flex;
-    justify-content: center;
-}
-
-.footer_link-wrapper {
-    display: flex;
-}
-
-.footer_link-items {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 16px;
-    text-align: left;
-    width: 160px;
-    box-sizing: border-box;
-}
-
-.footer_link-items h2 {
-    margin-bottom: 16px;
-}
-
-.footer_link-items > h2 {
-    color: #fff;
-}
-
-.footer_link-items a {
-    color: #fff;
-    text-decoration: none;
-    margin-bottom: 0.5rem;
-}
-
-.footer_link-items a:hover {
-    color: #e9e9e9;
-    transition: 0.3s ease-out;
-} */
-
-/* sociial icons */
 .social_icon-link {
     color: var(--accent);
     font-size: 24px;
@@ -557,214 +345,212 @@ body {
     color: var(--accent);
 }
 
-/* Rooms */
+/* phone */
+@media screen and (max-width: 960px) {
 
-.rooms_container {
-    /* display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    justify-self: center;
-    margin: auto;
-    height: 80vh;
-    background-color: #141414;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 0 50px; */
-    
-  }  
+    /* bodys background and margin */
+    body {
+        margin-left: 0;
+        margin-right: 0;
+    }
 
-h1 {
-    color: var(--accent);
-    font-size: 10rem;
-    font-family: var(--font2);
-    margin-bottom: 5%;
-    /* background-color: var(--background);
-    color: var(--accent);
-    mix-blend-mode: screen;
-    position: absolute;
-    width: 120vh;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%); 
-    font-family: var(--font2);   
-    font-size: 5rem;  */
-}
+    /* menu bar------------------------------------------------- */
 
-.rooms {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    justify-self: center;
-    margin: auto;
-    height: 80vh;
-    background-color: #141414;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 0 50px;
-}
-
-.article_3{
-    /* display: block;
-    width: 80%;
-    margin: auto;
-    text-align: left;
-    padding-top: 100px; */
-    /* display: grid;
-    grid-template-columns: 1fr 1fr; */
-    align-items: center;
-    justify-self: center;
-    margin: auto;
-    height: 200vh;
-    background-color: #141414;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 0 50px;
-}
-
-.article_3_h3 {
-    color: var(--accent);
-    font-size: 3rem;
-    font-family: var(--font2);
-    margin-bottom: 10%;
-}
-
-.article_3_h4 {
-    color: var(--accent);
-    font-size: 2rem;
-    font-family: var(--font2);
-    margin-bottom: 10%;
-}
-
-.article_3_p {
-    /* text-align: center; */
-    color: var(--accent);
-    font-size: 1.2em;
-    font-weight: 300;
-    font-family: var(--font2);
-    /* max-width: 60ch; */
-    line-height: 1.5em;
-    margin-bottom: 10%;
-}
-
-
-
-
-
-
-
-
-
-/* rooms test */
-
-
-.button {
-    font-size: 16px;
-    text-transform: uppercase;
-    font: 500;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    width: 140px;
-    display: block;
-    margin: 15px auto;
-    cursor: pointer;
-    transition: all 0.7 ease;
-}
-
-button:hover {
-    opacity: 0.85;
-}
-
-.flex {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-h1, h2, h3, h4, h5, h6 {
-    padding: 8px 0;
-}
-
-img {
-    width: 100%;
-    display: block;
-}
-
-/* room */
-
-.rooms {
-    margin: 40px 0;
-}
-
-.room {
-    margin: 45px 0;
-    padding-bottom: 25px;
-    background: var(--background);
-    color: var(--accent);
-}
-
-.room-text {
-    padding: 5px 20px;
-}
-.rom-text h3 {
-    font-size: 24px;
-}
-
-.room-text ul {
-    list-style-type: none;
-    margin: 15px 0;
-}
-
-.room-text ul li {
-    padding: 7px 0;
-}
-
-.room-text ul li i {
-    color: red;
-    margin-right: 10px;
-}
-
-.rate {
-    opacity: 0.8;
-}
-
-.rate span {
-    font-size: 40px;
-    font-weight: 900;
-    color: var(--accent);
-}
-
-.room-image {
-    overflow: hidden;
-}
-
-.room-image img {
-    transition: all 0.7 ease;
-}
-
-.room-image:hover img {
-    transform: scale(1.1);
-}
-
-@media (min-width:900px) {
-    .rooms-container {
+    /* menu container position */
+    .navbar_container {
         display: flex;
-        flex-wrap: wrap;
+        justify-content: space-between;
+        height: 80px;
+        z-index: 1;
+        width: 100%;
+        max-width: 1300px;
+        padding: 0;        
     }
-
-    .room {
-        flex: 0 0 cal(50% - 20px);
-        margin: 10px;
-    }
-}
-
-@media(min-width) {
     
+    /* menubar direction */
+    .navbar_menu {
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        top: -1000px;
+        opacity: 0;
+        transition: all 0.5 ease;
+        height: 50vh;
+        z-index: -1;
+    }
+
+    /*  */
+    .navbar_menu.active {
+        background: var(--background);
+        top: 100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 99;
+        height: 10vh;
+        font-size: 1.6rem;
+    }
+
+    /* logo position */
+    #navbar_logo {
+        padding-left: 25px;
+    }
+
+    /* menu button */
+    .navbar_toggle .bar {
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.3s ease-in-out;
+        background: var(--accent);
+    }
+
+    /* Home, Rooms och Contacts */
+    .navbar_links {
+        text-align: center;
+        padding: 2rem;
+        margin-left: -2rem;
+        width: 100%;
+        display: table;
+    }
+
+    /* menu lines position */
+    #mobile-menu {
+        position: absolute;
+        top: 20%;
+        right: 5%;
+        transform: translate(5%, 20%);        
+    }
+
+    /* hides to top button */
+    .navbar_button {
+        display: none;
+    }
+
+    /*  */
+    .navbar_toggle .bar {
+        display: block;
+        cursor: pointer;
+    }
+
+    /* transforms menu lines to x */
+
+    #mobile-menu.is-active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    #mobile-menu.is-active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    #mobile-menu.is-active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    /* menu bar end----------------------------------------------- */
+
+    /* Hero section---------------------------------------------- */
+    
+    /* Container holding the image and the text */
+    .main_container {
+        position: relative;
+        text-align: center;
+    }  
+  
+    /* Centered text */
+    .centered_h1 { 
+        width: 30vh;
+        font-size: 1.5rem;    
+    }  
+    
+    /* Hero section end------------------------------------------ */
+
+    /* Article 1 sektion ---------------------------------------------*/
+
+.article_1{
+    padding-top: 10px;
 }
 
+.article_1_h2 {
+    font-size: 1.2rem;
+    margin-bottom: 2%;
+}
 
+.article_1_h3 {
+    font-size: 0.8rem;
+    
+  }
 
+.article_1_p {
+    font-size: 0.6rem;
+    line-height: 1.5em;
+    margin-bottom: 5%;
+}
 
+/* article 1 end------------------------------------------------ */
+
+/* Image row section -------------------------------------------- */
+
+.column {
+    width: 50%;
+}
+
+  /* image row section ------------------------------------------ */
+
+  /* Article 2 section -------------------------------------------*/
+
+  
+  .article_2{
+    display: table-cell;
+    height: 60vh;
+}
+
+.article_2_h4 {
+    text-align: center;
+    transform: translate(-50% -50%);    
+    font-size: 1rem;
+    margin-bottom: 10%;
+}
+.article_2_p {
+    font-size: 0.8em;
+    width: 100%;
+    line-height: 1.2em;
+    margin: 5%;
+}
+
+.video {
+    padding: 10px;
+    margin-bottom: 50px;
+}
+
+/* Footer--------------------------------------------------------*/
+.footer_container {
+    padding: 2rem 0;
+}
+
+#footer_logo {
+    font-size: 1rem;
+}
+
+.social_icon-link {
+    font-size: 15px;
+}
+
+.social_media-wrap {
+    margin: 10px auto 0 auto;
+}
+
+.social_icons {
+    width: 140px;
+}
+
+.website_rights {
+    font-size: 0.5rem;
+}
+
+/* footer end --------------------------------------------------- */
+
+}
+
+/* mobile settings end ------------------------------------------- */
