--- a/style.css
+++ b/style.css
@@ -376,7 +376,7 @@ body {
         position: absolute;
         top: -1000px;
         opacity: 0;
-        transition: all 0.5 ease;
+        /* transition: all 0.5 ease; */
         height: 50vh;
         z-index: -1;
     }
@@ -508,7 +508,7 @@ body {
 
 .article_2_h4 {
     text-align: center;
-    transform: translate(-50% -50%);    
+    /* transform: translate(-50% -50%);     */
     font-size: 1rem;
     margin-bottom: 10%;
 }
