--- a/style_rooms.css
+++ b/style_rooms.css
@@ -60,7 +60,7 @@ header {
 h1 {
     color: var(--accent);
     text-align: center;
-    transform: translate(-50% -50%);
+    /* transform: translate(-50% -50%); */
     font-family: var(--font2);
     font-size: 8rem;
 }
@@ -68,7 +68,7 @@ h1 {
 h2 {
     color: var(--accent);
     text-align: center;
-    transform: translate(-50% -50%);
+    /* transform: translate(-50% -50%); */
     font-family: var(--font2);
     font-size: 4rem;
 }
@@ -76,7 +76,7 @@ h2 {
 h3 {
     color: var(--accent);
     text-align: left;
-    transform: translate(-50% -50%);
+    /* transform: translate(-50% -50%); */
     font-family: var(--font2);
     font-size: 3rem;
 }
