--- a/style_contacts.css
+++ b/style_contacts.css
@@ -44,6 +44,7 @@ h3 {
     margin-bottom: 50px;
 }
 
+/*  "outside border" */
 .borderbox {    
     display: flex;
     padding: 10px;
@@ -53,6 +54,7 @@ h3 {
     border: 10px solid var(--accent);    
 }
 
+/* "inside border" */
 fieldset {
     border-color: var(--accent);
     border-style: solid;    
@@ -60,6 +62,7 @@ fieldset {
     margin: 20px;
 }
 
+/* text in fieldset lines */
 legend{
     font-size: 2rem;
     font-family: var(--font2);
