--- a/style_rooms.css
+++ b/style_rooms.css
@@ -29,16 +29,10 @@ header {
     padding: 5vh;
 }
 
-/* html{
-    scroll-behavior: smooth;
-} */
-
 /* book now button */
 .btn {
     flex: auto;
-    font-size: 16px;
-    text-transform: uppercase;
-    /* border-color: var(--accent); */
+    /* font-size: 16px; */
     border-style: solid;
     border-radius: 20px;
     padding: 10px 20px;
@@ -60,7 +54,6 @@ header {
 h1 {
     color: var(--accent);
     text-align: center;
-    /* transform: translate(-50% -50%); */
     font-family: var(--font2);
     font-size: 8rem;
 }
@@ -68,7 +61,6 @@ h1 {
 h2 {
     color: var(--accent);
     text-align: center;
-    /* transform: translate(-50% -50%); */
     font-family: var(--font2);
     font-size: 4rem;
 }
@@ -76,7 +68,6 @@ h2 {
 h3 {
     color: var(--accent);
     text-align: left;
-    /* transform: translate(-50% -50%); */
     font-family: var(--font2);
     font-size: 3rem;
 }
